fix(form): field context now applied correctly

--- a/packages/ui/assets/styles/generic/_utilities.scss
+++ b/packages/ui/assets/styles/generic/_utilities.scss
@@ -1,8 +1,8 @@
 @layer utilities {
     :root {
-        .container {
-            @apply px-4 md:px-8 max-w-none;
-        }
+        // .container {
+        //     @apply px-4 md:px-8 max-w-none;
+        // }
 
         // .mask-image-radial-gradient {}
 
